--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -3,7 +3,7 @@ speakeasyVersion: latest
 sources:
     Creem API:
         inputs:
-            - location: ../openapi.json
+            - location: ./openapi.json
         registry:
             location: registry.speakeasyapi.dev/creem/engineering/creem-api
 targets:
