--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -15,10 +15,10 @@ generation:
     requestResponseComponentNamesFeb2024: true
     securityFeb2025: true
   auth:
-    oAuth2ClientCredentialsEnabled: true
-    oAuth2PasswordEnabled: true
+    oAuth2ClientCredentialsEnabled: false
+    oAuth2PasswordEnabled: false
 typescript:
-  version: 0.0.1
+  version: 0.1.0
   additionalDependencies:
     dependencies: {}
     devDependencies: {}
