Adds new release for organization publishing

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@creem_io/creem",
-  "version": "0.1.0",
+  "name": "creem",
+  "version": "0.1.1",
   "author": "Speakeasy",
   "type": "module",
   "bin": {
