--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creem",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "author": "Speakeasy",
   "type": "module",
   "bin": {
@@ -26,10 +26,11 @@
     "lint": "eslint --cache --max-warnings=0 src",
     "build:mcp": "bun src/mcp-server/build.mts",
     "build": "npm run build:mcp && tshy",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "peerDependencies": {
-    "@modelcontextprotocol/sdk": "^1.5.0",
+    "@modelcontextprotocol/sdk": ">=1.5.0 <1.10.0",
     "zod": ">= 3"
   },
   "peerDependenciesMeta": {
@@ -39,20 +40,23 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@modelcontextprotocol/sdk": "^1.5.0",
+    "@jest/globals": "^29.7.0",
+    "@modelcontextprotocol/sdk": ">=1.5.0 <1.10.0",
     "@stricli/core": "^1.1.1",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "bun": "^1.2.2",
     "bun-types": "^1.2.2",
     "eslint": "^9.19.0",
     "express": "^4.21.2",
     "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
     "tshy": "^2.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.22.0",
     "zod": "^3.23.4"
   },
-  "dependencies": {},
   "exports": {
     ".": {
       "import": {
