--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -14,11 +14,12 @@ generation:
     parameterOrderingFeb2024: true
     requestResponseComponentNamesFeb2024: true
     securityFeb2025: true
+    sharedErrorComponentsApr2025: false
   auth:
     oAuth2ClientCredentialsEnabled: false
     oAuth2PasswordEnabled: false
 typescript:
-  version: 0.3.23
+  version: 0.3.24
   additionalDependencies:
     dependencies: {}
     devDependencies:
