--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,6 +27,8 @@ jobs:
         run: yarn install --frozen-lockfile
 
       - name: Run tests
+        env:
+          TEST_API_KEY: ${{ secrets.TEST_API_KEY }}
         run: yarn test
 
       - name: Upload test results
