--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -19,12 +19,13 @@ generation:
     oAuth2ClientCredentialsEnabled: false
     oAuth2PasswordEnabled: false
 typescript:
-  version: 0.3.28
+  version: 0.3.31
   additionalDependencies:
     dependencies: {}
     devDependencies:
       '@jest/globals': ^29.7.0
       '@types/jest': ^29.5.14
+      dotenv: ^16.5.0
       jest: ^29.7.0
       ts-jest: ^29.3.2
     peerDependencies: {}
