--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "creem",
-  "version": "0.3.31",
+  "version": "0.3.32",
   "author": "Speakeasy",
   "scripts": {
     "lint": "eslint --cache --max-warnings=0 src",
@@ -58,6 +58,7 @@
     "typescript-eslint": "^8.22.0",
     "zod": "^3.23.4"
   },
+  "dependencies": {},
   "exports": {
     ".": {
       "import": {
