--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "sideEffects": false,
   "peerDependencies": {
     "@modelcontextprotocol/sdk": ">=1.5.0 <1.10.0",
-    "zod": ">= 3"
+    "zod": ">=3.0.0 <4.0.0"
   },
   "peerDependenciesMeta": {
     "@modelcontextprotocol/sdk": {
